Add network selection
